--- a/views/schedule.html
+++ b/views/schedule.html
@@ -12,9 +12,9 @@
       </nav>
       
       <div class="UserMenu">
-        <div class="UserMenu-avatar">
-          <img src="{{idToken.claims.picture}}">
-        </div>
+        <div class="UserMenu-avatar" ng-if="idToken">
+					<img src="https://randomuser.me/api/portraits/thumb/men/1.jpg" />
+				</div>
         
         <a class="UserMenu-name" ng-click="signout()">{{idToken.claims.name}}</a>
         <a class="UserMenu-toggle" ng-click="signout()"></a>
